# mimir-analyzer

./: .gitignore  .goreleaser.yml  CLAUDE.md  README.md  go.mod  go.sum  main.go
.github/workflows/: pypi.yml  release.yml  test.yml
amp/: client.go  client_test.go  discover.go  discover_test.go  errors.go  errors_test.go  query.go  query_test.go
cli/: cli.go  cli_test.go
config/: config.go  config_test.go
diagnostics/: bundles.go  bundles_test.go  compactor.go  compactor_test.go  distributor.go  distributor_test.go  ingester.go  ingester_test.go  querier.go  querier_test.go  ruler.go  ruler_test.go  store_gateway.go  store_gateway_test.go  summary.go  summary_test.go
mcp/: server.go  tools.go  tools_test.go  types.go
prompts/: debug_pain.md
python/: pyproject.toml
python/src/mimir_analyzer/: __init__.py  __main__.py
report/: formatter.go  formatter_test.go
scripts/: build_wheels.py
